fix(ngb-datepicker): dates now visible in datepicker
changed datpicker date color to dark color

--- a/scss/third-parties/_ng-bootstrap.scss
+++ b/scss/third-parties/_ng-bootstrap.scss
@@ -222,6 +222,14 @@
       background: $white !important;
     }
   }
+
+  ngb-datepicker .btn-light {
+    color: $dark;
+  }
+
+  ngb-datepicker.dropdown-menu.show {
+    z-index: $zindex-popover;
+  }
 }
 @keyframes expand{
   0%{
